Complete project reorganization and documentation
MAJOR RESTRUCTURE:
- Organized project into Frontend/Backend/Database/Public folders
- Moved all HTML, React, and frontend files to Frontend/
- Created Backend/ with Express.js server and dependencies
- Added Database/ with SQL schema and documentation
- Organized public assets into logo/icons/images subfolders

CODE REFACTORING:
- Updated all file paths in welcome.html and app.js
- Fixed image references to use new public/ structure
- Updated dev-server.py for new folder structure
- Enhanced package.json with new scripts and metadata

DOCUMENTATION:
- Created comprehensive README.md with full project info
- Added project timeline with date stamps
- Implemented update_readme.py for automated documentation
- Added installation, setup, and deployment instructions
- Included development guidelines and contributing info

TECHNICAL IMPROVEMENTS:
- Better separation of concerns
- Scalable folder structure
- Production-ready backend setup
- Database schema for future features
- Automated documentation system

--- a/package.json
+++ b/package.json
@@ -1,27 +1,38 @@
 {
-  "name": "truman-in-the-virtual",
+  "name": "truman-virtual-tour",
   "version": "1.0.0",
-  "description": "An immersive 3D skybox experience built with React and Three.js",
-  "main": "index.html",
+  "description": "An immersive 3D virtual tour experience for Truman State University",
+  "main": "Frontend/index.html",
   "scripts": {
-    "dev": "python -m http.server 8000",
-    "start": "python -m http.server 8000",
+    "dev": "python3 dev-server.py",
+    "start": "node Backend/server.js",
+    "frontend": "cd Frontend && python3 -m http.server 8000",
+    "backend": "cd Backend && npm start",
     "build": "echo 'Static build - no build step required'",
-    "preview": "python -m http.server 8000"
+    "update-readme": "python3 update_readme.py"
   },
   "keywords": [
+    "truman",
+    "virtual-tour",
     "3d",
     "skybox",
     "threejs",
     "react",
-    "virtual-reality",
-    "webgl"
+    "campus",
+    "university"
   ],
   "authors": [
     "Pranaya Khadgi Shahi",
     "Ali Musterih Addikebir"
   ],
+  "professor": "Dr. Kaafi Rahman",
+  "institution": "Truman State University",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pranayakhadgi/Truman-in-the-Virtual"
+  },
+  "homepage": "https://truman-in-the-virtual.vercel.app",
   "devDependencies": {},
   "dependencies": {}
 }
