feat: Add interactive annotation system with smooth camera transitions
- Added 6 clickable annotations positioned at skybox cube edges
- Implemented cinematic camera animations (1.5s duration) when clicking annotations
- Created professional UI panels with return-to-overview functionality
- Added 2D billboard rendering for annotations (always face camera)
- Enhanced user experience with hover effects and visual feedback
- Integrated Monocursive font for professional typography
- Optimized performance with efficient sprite rendering
- Cleaned up unused dialog box functions
- Updated README.md with comprehensive feature documentation
- Version bump to 1.1.0

This major update transforms the static virtual tour into an immersive, interactive experience with smooth camera transitions that guide users through different areas of the Truman campus.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "url": "https://github.com/pranayakhadgi/Truman-in-the-Virtual"
   },
   "homepage": "https://truman-in-the-virtual.vercel.app",
-  "devDependencies": {},
-  "dependencies": {}
+  "dependencies": {
+    "snyk": "^1.1300.0"
+  }
 }
