feat: Add backend integration, transition pages, and route fixes
- Added MongoDB Atlas integration with session management
- Implemented smooth transition pages between welcome and 3D tour
- Fixed port conflict handling with start:clean script
- Added error handling for route conflicts
- Updated welcome.html to detect server type (backend vs Live Server)
- Fixed absolute paths for static resources
- Added comprehensive documentation for execution and troubleshooting

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "An immersive 3D virtual tour experience for Truman State University",
   "main": "Frontend/index.html",
   "scripts": {
-    "dev": "python3 dev-server.py",
+    "dev": "cd Frontend && python3 dev-server.py",
     "start": "node Backend/server.js",
+    "start:clean": "lsof -ti :3000 | xargs kill -9 2>/dev/null; node Backend/server.js",
     "frontend": "cd Frontend && python3 -m http.server 8000",
     "backend": "cd Backend && npm start",
     "build": "echo 'Static build - no build step required'",
