--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,22 +1,29 @@
 {
   "name": "truman-virtual-tour-backend",
-  "version": "1.0.0",
-  "description": "Backend services for Truman Virtual Tour application",
+  "version": "1.1.0",
+  "description": "Backend services for Truman Virtual Tour with MongoDB Atlas integration",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
+    "test": "jest",
+    "test:db": "node tests/testDatabase.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.0",
     "helmet": "^7.0.0",
-    "dotenv": "^16.3.1"
+    "mongoose": "^8.19.3",
+    "uuid": "^13.0.0",
+    "validator": "^13.15.20"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.6.2"
+    "jest": "^29.6.2",
+    "nodemon": "^3.0.1"
   },
   "keywords": [
     "truman",
