--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,14 @@
   "name": "truman-in-the-virtual",
   "builds": [
     {
-      "src": "**/*",
-      "use": "@vercel/static"
+      "src": "api/index.js",
+      "use": "@vercel/node"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "/$1"
+      "source": "/(.*)",
+      "destination": "/api/index.js"
     }
   ]
 }
