--- a/package.json
+++ b/package.json
@@ -35,6 +35,16 @@
   },
   "homepage": "https://truman-in-the-virtual.vercel.app",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.0",
+    "helmet": "^7.0.0",
+    "mongoose": "^8.19.3",
+    "uuid": "^13.0.0",
+    "validator": "^13.15.20",
     "snyk": "^1.1300.0"
   }
 }
