--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,47 @@
 {
   "version": 2,
-  "name": "truman-in-the-virtual",
-  "builds": [
-    {
-      "src": "api/index.js",
-      "use": "@vercel/node"
-    }
-  ],
+  "buildCommand": "echo 'No build step required'",
+  "outputDirectory": ".",
+  "installCommand": "npm install",
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/api/(.*)",
       "destination": "/api/index.js"
+    },
+    {
+      "source": "/tour",
+      "destination": "/Frontend/index.html"
+    },
+    {
+      "source": "/queries",
+      "destination": "/Frontend/queries.html"
+    },
+    {
+      "source": "/transition",
+      "destination": "/Frontend/transition.html"
+    },
+    {
+      "source": "/placeholder",
+      "destination": "/Frontend/placeholder.html"
+    },
+    {
+      "source": "/welcome-flow",
+      "destination": "/Frontend/welcome-flow.html"
+    },
+    {
+      "source": "/",
+      "destination": "/Frontend/welcome.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/public/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
     }
   ]
 }
