Fix script paths for Vercel deployment - use absolute /Frontend/ paths

--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,10 @@
       "destination": "/api/index.js"
     },
     {
+      "source": "/Frontend/(.*)",
+      "destination": "/Frontend/$1"
+    },
+    {
       "source": "/tour",
       "destination": "/Frontend/index.html"
     },
