Implement image optimization and prepare Vite setup
- Add image optimization script (JPG/PNG to WebP with 53.9% average size reduction)
- Convert all 53 images in public folder to WebP format
- Update all image references in code to use .webp extension
- Add Vite configuration and React dependencies
- Create image path update script
- Add main.jsx entry point (placeholder for future Vite build)
- Update package.json with optimization and build scripts
- Maintain backward compatibility with existing Babel setup
- All routing functionality preserved (welcome -> queries -> tour intact)

Image optimization results:
- 53 images converted to WebP
- Average 53.9% file size reduction
- Faster image loading on deployed product
- All skybox images, thumbnails, and logos optimized

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "echo 'No build step required'",
+  "buildCommand": "npm run optimize-images",
   "outputDirectory": ".",
   "installCommand": "npm install",
   "rewrites": [
