--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "An immersive 3D virtual tour experience for Truman State University",
   "main": "Frontend/index.html",
   "scripts": {
-    "dev": "cd Frontend && python3 dev-server.py",
+    "dev": "vite",
+    "dev:python": "cd Frontend && python3 dev-server.py",
     "start": "node Backend/server.js",
     "start:clean": "lsof -ti :3000 | xargs kill -9 2>/dev/null; node Backend/server.js",
     "frontend": "cd Frontend && python3 -m http.server 8000",
     "backend": "cd Backend && npm start",
-    "build": "echo 'Static build - no build step required'",
+    "build": "vite build",
+    "build:optimize": "node scripts/optimize-images.js && vite build",
+    "optimize-images": "node scripts/optimize-images.js",
+    "preview": "vite preview",
     "update-readme": "python3 update_readme.py"
   },
   "keywords": [
@@ -43,8 +47,15 @@
     "express-validator": "^7.3.0",
     "helmet": "^7.0.0",
     "mongoose": "^8.19.3",
+    "snyk": "^1.1300.0",
     "uuid": "^13.0.0",
-    "validator": "^13.15.20",
-    "snyk": "^1.1300.0"
+    "validator": "^13.15.20"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^5.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "sharp": "^0.34.5",
+    "vite": "^7.2.4"
   }
 }
