--- a/vercel.json
+++ b/vercel.json
@@ -46,6 +46,15 @@
           "value": "public, max-age=31536000, immutable"
         }
       ]
+    },
+    {
+      "source": "/Frontend/(.*\\.(js|jsx|mjs))",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/javascript; charset=utf-8"
+        }
+      ]
     }
   ]
 }
